# lhm-service

./: .gitignore  Cargo.toml  LICENSE.rtf  README.md  build.rs  cspell.json  lhm-service.en-us.wxl  lhm-service.iss  lhm-service.sln  lhm-service.wxs
.github/workflows/: build-and-bundle.yml
crates/lhm-client/: Cargo.toml  README.md
crates/lhm-client/examples/: cpu_temp.rs  gpu_temp.rs  mem.rs  query_hardware.rs
crates/lhm-client/src/: lib.rs  main.rs  pipe.rs  service.rs
crates/lhm-client/tests/: cpu_temp.rs
crates/lhm-server/: Cargo.toml  README.md
crates/lhm-server/src/: actor.rs  cache.rs  lib.rs  pipe.rs
crates/lhm-service/: Cargo.toml  build.rs
crates/lhm-service/lhm-bridge/: lhm-bridge.sln
crates/lhm-service/src/: actor.rs  ffi.rs  main.rs  server.rs  service.rs
crates/lhm-shared/: Cargo.toml  README.md
crates/lhm-shared/src/: codec.rs  lib.rs
crates/lhm-sys/: Cargo.toml  README.md  build.rs
crates/lhm-sys-static/: Cargo.toml  README.md  build.rs
crates/lhm-sys-static/lhm-bridge/: lhm-bridge.csproj
crates/lhm-sys-static/lhm-bridge/src/: Array.cs  Error.cs  FFI.cs  Hardware.cs  Helpers.cs  Sensor.cs  UpdateVisitor.cs
crates/lhm-sys-static/src/: lib.rs
crates/lhm-sys/lhm-bridge/: Bridge.cs  lhm-bridge.csproj  rd.xml
crates/lhm-sys/lhm-bridge/src/: Array.cs  Bridge.cs  Computer.cs  Error.cs  FFI.cs  Hardware.cs  Helpers.cs  Sensor.cs
crates/lhm-sys/src/: ffi.rs  lib.rs
lhm-bridge/: Bridge.cs  lhm-bridge.csproj
src/: actor.rs  ffi.rs  main.rs  service.rs
