[workspace]
resolver = "2"
members = [
    "crates/lhm-shared",
    "crates/lhm-server",
    "crates/lhm-service",
    "crates/lhm-client",
    "crates/lhm-sys",
]

[workspace.dependencies]
# Interprocess communication for client and service
interprocess = { version = "2.2.3", features = ["tokio"] }

# Serialization for underlying protocol
serde = { version = "1", features = ["derive"] }

rmp-serde = "1.3.0"
