[package]
name = "lhm-client"
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Client for using the LHM service"

[dependencies]
interprocess = { workspace = true }

tokio = { version = "1", features = [] }

# Shared structures
lhm-shared = { version = "0.0.0", path = "../lhm-shared" }
rmp-serde.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
parking_lot = "0.12.3"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
