[package]
name = "lhm-client"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Client for using the LHM service"

[dependencies]
interprocess.workspace = true
rmp-serde.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true

thiserror.workspace = true

parking_lot.workspace = true

# Shared structures
lhm-shared = { version = "0.2.0", path = "../lhm-shared" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
