[package]
name = "lhm-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Server for running LHM and allowing clients to connect to it without requiring admin rights"

[dependencies]
# Named pipe implementation
interprocess = { workspace = true }

# Serialization
rmp-serde = { workspace = true }

# Async runtime 
tokio = { version = "1", features = ["rt", "sync"] }

# Protocol framing and async utilities
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }

# Wide string for creating a security descriptor
widestring = "1"

# Shared helpers
lhm-shared = { version = "0.1.0", path = "../lhm-shared" }

# Core library
lhm-sys = { version = "0.1.0", path = "../lhm-sys" }
