[package]
name = "lhm-service"
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Windows service for running LHM and allowing clients to connect to it without requiring admin rights"

[dependencies]
# Error type
anyhow = "1"

# Async runtime 
tokio = { version = "1", features = ["rt", "sync"] }

# Windows service library
windows-service = "0.7"

# Server to handle requests
lhm-server = { version = "0.0.0", path = "../lhm-server" }
