[package]
name = "lhm-sys-static"
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Wrapper around Libre Hardware Monitor to request hardware (and temperatures)"

[dependencies]

[build-dependencies]
dirs = "6.0.0"
cc = "1.2.22"
