[package]
name = "lhm-sys"
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Wrapper around Libre Hardware Monitor to request hardware (and temperatures)"

[dependencies]
dlopen = "0.1"
dlopen_derive = "0.1.4"
lhm-shared = { version = "0.0.0", path = "../lhm-shared" }
