[package]
name = "lhm-sys"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/lhm-service"
readme = "README.md"
description = "Wrapper around Libre Hardware Monitor to request hardware (and temperatures)"

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = ["static"]
dylib = []
static = ["dep:cc"]
